envoy-gateway/extras/tls-examples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-tls-route
  namespace: default
spec:
  parentRefs:
    - name: example-tls-gateway
  hostnames:
    - tls.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: example-tls-svc
          port: 8443
